Revision history for Log-Any-Adapter-Dupstd

0.02    2015-10-25
        First version, released on an unsuspecting world.

0.01    2015-09-02
        First version, released on an unsuspecting world.
