@@ -40,9 +40,9 @@ STDOUT or STDERR
     ...
     Log::Any::Adapter->set('Dupout');
     Log::Any::Adapter->set('Duperr');
-     
+
     # with minimum level 'warn'
-     
+
     use Log::Any::Adapter ('Dupout', log_level => 'warn' );
     use Log::Any::Adapter ('Duperr', log_level => 'warn' );
 
@@ -60,7 +60,7 @@ descriptors STDOUT and STDERR.
 Logging into a duplicate of standard descriptor might be needed in special
 occasions when you need to redefine or even close standard descriptor but you
 want to continue displaying messages wherever they are displayed by a standard
-descriptor. 
+descriptor.
 
 For instance, your script types something in STDERR, and you want to redirect
 that message into a file. If you redirect STDERR into a file, warnings C<warn>
@@ -103,7 +103,7 @@ That warning will be impossible to filter in the shell.
 
 That is the situation when you need adapter Dupstd. Warnings and exceptions sent
 using these adapters will be "real". They can be filtered in the shell just as
-if they would have been sent to usual STDERR. 
+if they would have been sent to usual STDERR.
 
     # Adapter Duperr (definitely PRIOR TO redirecting STDERR)
     use Log::Any::Adapter ('Duperr');
@@ -129,13 +129,20 @@ Standard descriptor can't be reopened, that's why the duplicate must be made in 
 
 In this distributive there are two cunning adapters - Dupout and Duperr.
 
-These adapters work similarly to ordinary adapters from distributive Log::Any - 
+These adapters work similarly to ordinary adapters from distributive Log::Any -
 L<Stdout|Log::Any::Adapter::Stdout> and L<Stderr|Log::Any::Adapter::Stderr> (save that inside are used descriptors duplicates).
 
 
 =head1 SEE ALSO
 
 L<Log::Any|Log::Any>, L<Log::Any::Adapter|Log::Any::Adapter>, L<Log::Any::For::Std|Log::Any::For::Std>
+
+=head1 LICENSE
+
+Copyright (C) Mikhail Ivanov.
+
+This library is free software; you can redistribute it and/or modify
+it under the same terms as Perl itself.
 
 =head1 AUTHORS
 
@@ -151,12 +158,5 @@ Anastasia Zherebtsova <zherebtsova@gmail.com> - translation of documentation
 into English
 
 =back
-
-=head1 COPYRIGHT AND LICENSE
-
-This software is copyright (c) 2015 by Mikhail Ivanov.
-
-This is free software; you can redistribute it and/or modify it under
-the same terms as the Perl 5 programming language system itself.
 
 =cut
