@@ -1,8 +1,9 @@
-Revision history for Log-Any-Adapter-Dupstd
+Revision history for Perl extension Log-Any-Adapter-Dupstd
+
+{{$NEXT}}
 
 0.02    2015-10-25
         First version, released on an unsuspecting world.
 
 0.01    2015-09-02
         First version, released on an unsuspecting world.
-
